# singularity-hydrogym

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md
bash_scripts/configurations/python/: config_generator_natural_flow.py
bash_scripts/docker/: build_container.sh  run_container.sh
bash_scripts/local/docker/: build_container.sh  run_container.sh  run_containerDEBUG.sh
bash_scripts/local/mlflow/: delete_runs.sh  launch_mlflow.sh
bash_scripts/local/singularity/: build_container.sh  build_container_from_docker_daemon.sh  build_container_singularity3.sh  run_container.sh  run_container_nousernamespace.sh
bash_scripts/singularity/: build_container.sh  build_container_from_docker_daemon.sh  run_container.sh
configs/cavity/: cavity_reynolds-7500.yaml
data/: .gitkeep
docker/: Dockerfile
examples/generate_natural_states/: generate_natural_states.py  generate_natural_states_job_array.py
examples/generate_steady_states/: generate_steady_states.py
singularity/: readme.md
singularity/archives/: hydrogym-firedrake_nousernamespace.def  hydrogym.def
singularity/definition_files/: hydrogym-firedrake.def  hydrogym-firedrake_nousernamespace.def
singularity_hydrogym/environments/: navierstokes2d.py
singularity_hydrogym/integration/: __main__.py  firedrake_evaluate.py  run_navierstokes2d.py  steady_state.py
singularity_hydrogym/utils/: utils.py
src/: sine-forcing.py
src/environments/: abstract_interface.py  navierstokes2d.py
src/integration/: __main__.py  firedrake_evaluate.py  main.py
src/utils/: utils.py
(+179 files in other folders)
