[build-system]
requires = ["hatchling", "pip<=24.0"]
build-backend = "hatchling.build"

[project]
name = "singularity_hydrogym"
version = "0.0.1"
dependencies = [
    "gymnasium",
    "hydrogym @ git+https://github.com/ReHoss/hydrogym.git@feature/add_back_coarse_meshes",
    "jsonschema",
    "matplotlib",
    "mlflow==1.27",
    "numpy",
    "pandas",
    "pyyaml",
    "sb3-contrib",
    "scipy",
    "tensorboard",
    "tqdm",
]

requires-python = ">=3.10"
authors = [
    { name = "Hosseinkhan Boucher Rémy", email = "remy.hosseinkhan@universite-paris-saclay.fr" },
]
maintainers = [
    { name = "Hosseinkhan Boucher Rémy", email = "remy.hosseinkhan@universite-paris-saclay.fr" },
]
description = "Singularity and Stable Baselines3 (Reinforcement Learning) support for the Hydrogym project."
readme = "README.md"
keywords = ["Hydrogym", "Singularity", "Docker", "Computational Fluid Dynamics", "Reinforcement Learning", "Stable Baselines3"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.metadata] # Allows to install Github repositoires (error otherwise)
allow-direct-references = true